fix: font issue on firefox

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,16 +3,16 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 200;
-  src: local('Montserrat'), url('/fonts/montserrat/montserrat-v15-latin-200.woff2') format('woff2'),
+  src: url('/fonts/montserrat/montserrat-v15-latin-200.woff2') format('woff2'),
     url('/fonts/montserrat/montserrat-v15-latin-200.woff') format('woff');
-  font-display: swap;
+  font-display: fallback;
 }
 /* montserrat-regular - latin */
 @font-face {
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
-  src: local('Montserrat'), url('/fonts/montserrat/montserrat-v15-latin-regular.woff2') format('woff2'),
+  src: url('/fonts/montserrat/montserrat-v15-latin-regular.woff2') format('woff2'),
     url('/fonts/montserrat/montserrat-v15-latin-regular.woff') format('woff');
   font-display: swap;
 }
@@ -21,7 +21,7 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 600;
-  src: local('Montserrat'), url('/fonts/montserrat/montserrat-v15-latin-600.woff2') format('woff2'),
+  src: url('/fonts/montserrat/montserrat-v15-latin-600.woff2') format('woff2'),
     url('/fonts/montserrat/montserrat-v15-latin-600.woff') format('woff');
   font-display: swap;
 }
@@ -30,16 +30,16 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 800;
-  src: local('Montserrat'), url('/fonts/montserrat/montserrat-v15-latin-800.woff2') format('woff2'),
+  src: url('/fonts/montserrat/montserrat-v15-latin-800.woff2') format('woff2'),
     url('/fonts/montserrat/montserrat-v15-latin-800.woff') format('woff');
-  font-display: swap;
+  font-display: fallback;
 }
 /* roboto-regular - latin */
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: local('Roboto'), url('/fonts/roboto/roboto-v20-latin-regular.woff2') format('woff2'),
+  src: url('/fonts/roboto/roboto-v20-latin-regular.woff2') format('woff2'),
     url('/fonts/roboto/roboto-v20-latin-regular.woff') format('woff');
   font-display: swap;
 }
@@ -48,7 +48,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  src: local('Roboto'), url('/fonts/roboto/roboto-v20-latin-700.woff2') format('woff2'),
+  src: url('/fonts/roboto/roboto-v20-latin-700.woff2') format('woff2'),
     url('/fonts/roboto/roboto-v20-latin-700.woff') format('woff');
   font-display: swap;
 }
@@ -56,7 +56,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: local('Roboto'), url('/fonts/roboto/roboto-v20-latin-500.woff2') format('woff2'),
+  src: url('/fonts/roboto/roboto-v20-latin-500.woff2') format('woff2'),
     url('/fonts/roboto/roboto-v20-latin-500.woff') format('woff');
   font-display: swap;
 }
